--- a/labs/lab03/lab3.ipynb
+++ b/labs/lab03/lab3.ipynb
@@ -537,7 +537,21 @@
         "id": "ojc04wMDx3SC"
       },
       "source": [
-        "**TODO:** Scrieție aici răspunsurile voastre (dublu-click pe aceasta celulă pentru a intra în modul editare).\n"
+        "**TODO:** Scrieție aici răspunsurile voastre (dublu-click pe aceasta celulă pentru a intra în modul editare).\n",
+        "\n",
+        "A1 = 0\n",
+        "\n",
+        "A2 = 0\n",
+        "\n",
+        "A3 = 1/2\n",
+        "\n",
+        "A4 = 1/2\n",
+        "\n",
+        "A5 = 1/4\n",
+        "\n",
+        "A6 = 1/4\n",
+        "\n",
+        "max(Adv) = 1/2\n"
       ]
     },
     {
@@ -593,7 +607,17 @@
         "id": "VisGwPP0yLJV"
       },
       "source": [
-        "**TODO:** Scrieție aici răspunsurile voastre (dublu-click pe aceasta celulă pentru a intra în modul editare)."
+        "**TODO:** Scrieție aici răspunsurile voastre (dublu-click pe aceasta celulă pentru a intra în modul editare).\n",
+        "\n",
+        "G1 = SIGUR\n",
+        "\n",
+        "G2 = NESIGUR\n",
+        "\n",
+        "G3 = NESIGUR\n",
+        "\n",
+        "G4 = SIGUR daca k1 != k2 altfel NESIGUR\n",
+        "\n",
+        "G5 = NESIGUR"
       ]
     },
     {
