--- a/labs/lab03/lab3.ipynb
+++ b/labs/lab03/lab3.ipynb
@@ -679,12 +679,35 @@
         "    \"\"\"Generate random bit string\"\"\"\n",
         "    return bin(random.getrandbits(n)).lstrip(\"0b\").zfill(n)\n",
         "\n",
+        "def prg(n :int) -> str:\n",
+        "  R = get_random_string(n)\n",
+        "  output =\"\"\n",
         "\n",
-        "# TODO 4: implement and run the multiple times (e.g., 100) the\n",
-        "# statistical tests\n",
+        "  for r in R:\n",
+        "    if r == \"1\":\n",
+        "      output += \"1\"\n",
+        "    else:\n",
+        "      output += str(random.randint(0, 1))\n",
         "\n",
-        "N_RUNS = 100  # the number of runs\n",
-        "N_BITS = 1000  # the number of bits to generate\n"
+        "  return output\n",
+        "\n",
+        "def monobit_test(bitstring: str) -> bool:\n",
+        "    n = len(bitstring)\n",
+        "    S_n = sum(1 if bit == \"1\" else -1 for bit in bitstring)\n",
+        "    S_obs = abs(S_n) / math.sqrt(n)\n",
+        "    p_value = math.erfc(S_obs / math.sqrt(2))\n",
+        "\n",
+        "    return p_value > 0.01\n",
+        "\n",
+        "\n",
+        "N_RUNS = 100\n",
+        "N_BITS = 100\n",
+        "\n",
+        "prg_passes = sum(monobit_test(prg(N_BITS)) for _ in range(N_RUNS))\n",
+        "random_passes = sum(monobit_test(get_random_string(N_BITS)) for _ in range(N_RUNS))\n",
+        "\n",
+        "print(f\"PRG Pass Rate: {prg_passes / N_RUNS:.2%}\")\n",
+        "print(f\"Random Pass Rate: {random_passes / N_RUNS:.2%}\")"
       ]
     },
     {
