--- a/labs/lab04/lab4.ipynb
+++ b/labs/lab04/lab4.ipynb
@@ -643,11 +643,14 @@
         "y12 = y[4:8]\n",
         "y21 = y[8:12]\n",
         "y22 = y[12:16]\n",
+        "#Scot cate 4 biti din y\n",
         "\n",
         "k1 = bitxor(x1, byte_2_bin(rsbox[int(y12 + y21, 2)]))\n",
         "k2 = bitxor(x2, byte_2_bin(rsbox[int(y22 + y11, 2)]))\n",
+        "#Folosesc formula din pptx si calculez cate 8 biti din cheie\n",
         "k = k1 + k2\n",
         "ks = k\n",
+        "#Stochez cheia concatenata care este deja bin in ks\n",
         "\n",
         "print(\"Cele doua jumatati ale lui y obtiune de mine sunt:\"\n",
         "      f\"{y11 + y12} (hex: {bin_2_hex(y11 + y12)}), \"\n",
@@ -697,12 +700,37 @@
       "source": [
         "\n",
         "# Run full 2-byte SPN\n",
-        "msg = \"Om\"\n",
+        "msg = \"El\"\n",
+        "y = \"d00e\"\n",
         "key = \"????\"  # Find the key that should replace ????\n",
         "ks = str_2_bin(key)\n",
         "\n",
         "# TODO 2: Find the key in the full 2-byte SPN\n",
+        "def brute_force(msg, y):\n",
+        "  x1, x2 = str_2_bin(msg)[0:8], str_2_bin(msg)[8:16]\n",
+        "  y = hex_2_bin(y)\n",
+        "  y11 = y[0:4]\n",
+        "  y12 = y[4:8]\n",
+        "  y21 = y[8:12]\n",
+        "  y22 = y[12:16]\n",
         "\n",
+        "  for i in range(256):\n",
+        "    for j in range(256):\n",
+        "      k31, k32 = byte_2_bin(i)[0:4], byte_2_bin(i)[4:8]\n",
+        "      k41, k42 = byte_2_bin(j)[0:4], byte_2_bin(j)[4:8]\n",
+        "      k3 = k31 + k32\n",
+        "      k4 = k41 + k42\n",
+        "\n",
+        "      z1 = bitxor(y12, k32) + bitxor(y21, k41)\n",
+        "      z2 = bitxor(y22, k42) + bitxor(y11, k31)\n",
+        "      k1 = bitxor(x1, byte_2_bin(rsbox[int(z1, 2)]))\n",
+        "      k2 = bitxor(x2, byte_2_bin(rsbox[int(z2, 2)]))\n",
+        "      ks = k1 + k2 + k3 + k4\n",
+        "      ys = spn_1r_full_2s(ks, str_2_bin(msg))\n",
+        "      if y == ys:\n",
+        "        return ks\n",
+        "\n",
+        "ks = brute_force(msg, y)\n",
         "xs = str_2_bin(msg)\n",
         "ys = spn_1r_full_2s(ks, xs)\n",
         "print(\n",
