--- a/labs/lab05/lab5.ipynb
+++ b/labs/lab05/lab5.ipynb
@@ -773,7 +773,10 @@
         "    key_pairs.append((k11, table[index][0]))\n",
         "\n",
         "# TODO D.5: From the set of candidate keys, print the ones matching\n",
-        "# the second constraint: des2_enc(k1, k2, m2) == c2\n"
+        "# the second constraint: des2_enc(k1, k2, m2) == c2\n",
+        "for k1, k2 in key_pairs:\n",
+        "  if des2_enc(k1, k2, m2) == c2:\n",
+        "    print(k1, k2)"
       ]
     },
     {
