--- a/teme/tema25/tema_2025.ipynb
+++ b/teme/tema25/tema_2025.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "KgueujrU8vor"
+        "id": "ZbhWms4V4veX"
       },
       "source": [
         "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/ACS-IC-labs/IC-labs/blob/main/teme/tema25/tema_2025.ipynb)"
@@ -12,7 +12,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "kRkVU1SU8vot"
+        "id": "6GwzFNKz4veY"
       },
       "source": [
         "# **Tema Criptologie 2025**"
@@ -21,7 +21,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "r_k8UftD8vou"
+        "id": "RcilRGBG4veY"
       },
       "source": [
         "## Task 1 - Break the LFSR (30p)\n"
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "yn7GUOED8vow"
+        "id": "0TQJT2Lj4veZ"
       },
       "source": [
         "Am discutat la curs și laborator despre cum securitatea unui cifru șir (stream cipher) este influențată de securitatea PRG-ului folosit pentru a genera cheia. În acest exercițiu, vom vedea cum putem ataca un cifru șir bazat pe un LFSR ([Linear-Feedback Shift Register](https://en.wikipedia.org/wiki/Linear-feedback_shift_register)) liniar.\n",
@@ -47,7 +47,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "t5YL9Ev08vox"
+        "id": "oI1-gB7x4vea"
       },
       "source": [
         "Mai jos oferim funcțiile ajutătoare pentru conversii de date și operația xor, disponibile din cadrul laboratoarelor."
@@ -57,7 +57,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "9zUgbN578voz"
+        "id": "h6BAhU5V4vea"
       },
       "outputs": [],
       "source": [
@@ -367,7 +367,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vsSoutpA8vo2"
+        "id": "m1FYYaMy4vec"
       },
       "source": [
         "În continuare, vom folosi urmatoarea implementare de LFSR, care depinde de pozițiile care determină starea urmatoare, numite _taps_, și _starea inițială_ a PRG-ului. Valorile _taps_ au fost alese așa fel încât perioada maximă pe care o poate genera LFS-ul este $2^n-1$, unde $n$ reprezintă numărul de biți din stare. În cazul nostru, LFSR-ul are o stare de 88 bits și implementează taps `[88, 87, 17, 16]`.\n",
@@ -391,7 +391,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "-MJ3CRF38vo3"
+        "id": "dNaEo2sF4vec"
       },
       "outputs": [],
       "source": [
@@ -444,7 +444,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ZwuJep0J8vo5"
+        "id": "mtv2oD3-4ved"
       },
       "source": [
         "Flag-ul a fost criptat folosind codul de mai jos.\n",
@@ -474,7 +474,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "RgL_POIw8vo6"
+        "id": "_4BEVoeq4vee"
       },
       "source": [
         "Descărcați fișierul cu flagul, rulând celula de mai jos."
@@ -484,7 +484,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "GwkACWD88vo6"
+        "id": "JONsagrP4vef"
       },
       "outputs": [],
       "source": [
@@ -494,7 +494,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "HZSiwL5H8vo8"
+        "id": "KLjnT_mb4veg"
       },
       "source": [
         "Completați codul următor pentru a efectua atacul. Citirea flagului criptat este deja realizată."
@@ -504,28 +504,30 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "bi-rss6P8vo8"
+        "id": "2PmD0Ssg4veg"
       },
       "outputs": [],
       "source": [
         "with open(\"flag.enc\", \"r\") as f:\n",
         "    flag_enc = f.read().strip()\n",
-        "known_plaintext = str_2_bin(\"CRYPTO_CTF{\")\n",
+        "\n",
         "########## SOLUȚIA AICI ##########\n",
-        "key_start = bitxor(known_plaintext, hex_2_bin(flag_enc)[len(known_plaintext):])\n",
-        "print(len(known_plaintext))\n",
-        "print(len(key_start))\n",
-        "print(len(hex_2_bin(flag_enc)))\n",
-        "print(bin_2_str(bitxor(key_start, hex_2_bin(flag_enc)[len(key_start):])))\n",
+        "known_plaintext = str_2_bin(\"CRYPTO_CTF{\")\n",
+        "key_start = bitxor(known_plaintext, hex_2_bin(flag_enc)[:len(known_plaintext)])\n",
+        "seed = key_start[::-1]\n",
+        "taps = [88, 87, 17, 16]\n",
+        "lfsr = LFSR(taps, seed)\n",
+        "key  = lfsr.generate(len(hex_2_bin(flag_enc)))\n",
+        "flag = bin_2_str(bitxor(hex_2_bin(flag_enc), key))\n",
         "##################################\n",
         "\n",
-        "print(flag_enc)"
+        "print(flag)"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "zFUvPaNK8vo9"
+        "id": "7DFXkdO34veg"
       },
       "source": [
         "## Task 2 - Differential Cryptanalysis (70p)"
@@ -534,7 +536,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Pd6K_mmY8vo-"
+        "id": "yVBGIVQI4veh"
       },
       "source": [
         "Avem următorul program de gestionare a notițelor. Programul ne permite să scriem notițe și să citim notițele scrise. Desigur, mesajele salvate vor trebui criptate, pentru a ne asigura că nu pot fi citite de altcineva.\n",
@@ -549,7 +551,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "2NkY9wfY8vo-"
+        "id": "Sh2pPPp44veh"
       },
       "outputs": [],
       "source": [
@@ -667,7 +669,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "p8FzMlHU8vo_"
+        "id": "HS69_kvY4vei"
       },
       "source": [
         "Atacul pe care ne dorim să îl implementăm este descris în [Differential Cryptanalysis of Nimbus](https://link.springer.com/content/pdf/10.1007/3-540-45473-X_16.pdf), pentru a experimenta cu conceptul de Differential Cryptanalysis pe un algoritm de criptare mai simplu decât full DES. Așa cum este descris și în articol, putem afla cheia $K$ cu doar 256 plaintexts și testând doar 1024 subchei posibile. În această temă puteți încerca să implementați întocmai atacul descris în articol sau puteți folosi parțial ideea. Va trebui să urmăm pașii unui atac clasic de Differential Cryptanalysis.\n",
@@ -704,7 +706,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "BkZoKkYQ8vpA"
+        "id": "ZV_ZLRwp4vej"
       },
       "outputs": [],
       "source": [
@@ -1071,6 +1073,7 @@
   "metadata": {
     "colab": {
       "private_outputs": true,
+      "toc_visible": true,
       "provenance": []
     },
     "kernelspec": {
